# ebook-scan-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  coordinate_extractor.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  ui_window.py
.claude/: settings.local.json
.github/workflows/: ci.yml
src/ebook_scan/: __main__.py  main.py
src/ebook_scan/config/: app_config.py
src/ebook_scan/core/: coordinate_manager.py  pdf_generator.py  screen_capture_manager.py
src/ebook_scan/gui/: main_window.py
src/ebook_scan/utils/: helpers.py
tests/: test_ebook_scan.py
